<resources>
    <string name="app_name">MediProject</string>

    <string name="titleDef">제목</string>

    <string name="prev">이전</string>
    <string name="next">다음</string>

    <!-- 용기 종류 선택 -->
    <string name="containerTitle">측정 대상 용기 선택</string>
    <string name="containerDiaperDescription">귀저기 무게 측정</string>
    <string name="containerGreenDescription">녹색 소변통 무게 측정</string>
    <string name="containerBottleDescription">투명 통 무게 측정</string>

    <!-- 녹색 통 용기 안내 -->
    <string name="greenTitle">녹색 소변통 무게 측정 안내</string>

    <!-- 귀저기 용기 안내 -->
    <string name="diaperTitle">귀저기 무게 측정 안내</string>

    <!-- 투명 통 용기 안내 -->
    <string name="bottleTitle">투명 통 무게 측정 안내</string>

    <!-- 소변 무게 측정 -->
    <string name="urineTitle">소변량 측정</string>
    <string name="weightBtn">저울로 측정</string>
    <string name="urineHint">소변량 입력</string>
    <string name="urineUnit">cc</string>

    <!-- 섭취량 기록 -->
    <string name="consumeTitle">섭취량 기록</string>
    <string name="consumePrompt">식단 메뉴 중 드신 메뉴를 선택하세요.</string>
    <string name="drinkPrompt">섭취하신 액체의 양을 입력하세요.</string>
    <string name="drinkHint">액체량 입력</string>

    <!-- Picker -->
    <string name="btnPick">선택</string>
    <string name="promptPick">위 선택 버튼을 눌러주세요.</string>
    <string name="alertPick">선택 버튼을 눌러주세요.</string>
    <string name="alertWrong">현재 날짜/시간을 초과하였습니다.</string>

</resources>
