<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearViewFull"
    android:background="@color/Back"
    tools:context=".PromptBottleActivity">

    <TextView
        android:id="@+id/titleBar"
        style="@style/titleBar"
        android:text="@string/bottleTitle" />

    <LinearLayout
        style="@style/linearViewContent">

        <ImageView
            android:id="@+id/bottleEx1"
            style="@style/imgLeft"
            android:src="@drawable/container_bottle"
            android:contentDescription="@string/containerBottleDescription"/>

        <ImageView
            android:id="@+id/bottleEx2"
            style="@style/imgCenter"
            android:src="@drawable/container_bottle"
            android:contentDescription="@string/containerBottleDescription" />

        <ImageView
            android:id="@+id/bottleEx3"
            style="@style/imgRight"
            android:src="@drawable/container_bottle"
            android:contentDescription="@string/containerBottleDescription"/>

    </LinearLayout>

    <LinearLayout
        style="@style/linearViewBottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPrev"
                style="@style/btnPrev"
                android:text="@string/prev" />

            <Button
                android:id="@+id/btnNext"
                style="@style/btnNext"
                android:text="@string/next" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>