<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearViewScreen">


    <RelativeLayout
        style="@style/titleBanner">

        <TextView
            android:id="@+id/p_name"
            style="@style/title_pname"/>

        <TextView style="@style/title_jay" />

        <ImageView
            android:src="@drawable/white_logo_2"
            style="@style/title_logo"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/linearViewContent">

        <ImageButton
            android:id="@+id/imgDiaper"
            style="@style/imgLeft"
            android:src="@drawable/container_diaper"
            android:contentDescription="@string/containerDiaperDescription"/>

        <ImageButton
            android:id="@+id/imgBottle"
            style="@style/imgCenter"
            android:src="@drawable/container_bottle"
            android:contentDescription="@string/containerBottleDescription" />

        <ImageButton
            android:id="@+id/imgGreen"
            style="@style/imgRight"
            android:src="@drawable/container_green"
            android:contentDescription="@string/containerGreenDescription"/>

    </LinearLayout>


    <RelativeLayout
        style="@style/linearViewBot">

        <Button
            android:id="@+id/Bnt_prev"
            style="@style/buttonPrev"
            android:text="이전"/>

   </RelativeLayout>

</LinearLayout>