<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearViewFull"
    tools:context=".VolleyTestActivity">

    <TextView
        android:id="@+id/titleBar"
        style="@style/titleBar"
        android:text="@string/titleDef" />

    <LinearLayout
        style="@style/linearViewContent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="Input Here"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SEND" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="5"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:scrollbars="vertical"/>

    <LinearLayout
        style="@style/linearViewBottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPrev"
                style="@style/btnPrev"
                android:text="@string/prev" />

            <Button
                android:id="@+id/btnNext"
                style="@style/btnNext"
                android:text="@string/next" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>